--- a/static/css/leonardo.css
+++ b/static/css/leonardo.css
@@ -7,12 +7,10 @@ html {
 	box-sizing: border-box;
 	font-size: 62.5%;
 }
-body {
-}
 #box {
-	background: SlateGray;
+	background: Gainsboro;
 	margin: 0 auto;
-	width: 990px;
+	width: 100%;
 }
 
 /* vim: set tabstop=2:softtabstop=2:shiftwidth=2:noexpandtab */
