--- a/static/css/leonardo.css
+++ b/static/css/leonardo.css
@@ -1,17 +1,23 @@
-*,*::before,*::after {
+*,
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
 	box-sizing: inherit;
 }
+
 html {
 	box-sizing: border-box;
 	font-size: 62.5%;
 }
-#box {
+
+body {
 	background: Gainsboro;
+}
+
+#box {
 	margin: 0 auto;
-	width: 100%;
+	width: 1850px;
 }
 
 /* vim: set tabstop=2:softtabstop=2:shiftwidth=2:noexpandtab */
-
